[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/SoundEffects.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/footsteps.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/gunshot.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/footstep_water_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/footstep_water_2.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/footstep_water_5.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/ammo_pickup.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/empty_fire.ogg" type="AudioStream" id=8]

[sub_resource type="AudioStreamRandomPitch" id=1]

audio_stream = ExtResource( 3 )
random_pitch = 1.25

[sub_resource type="Animation" id=2]

resource_name = "."
length = 0.6
loop = true
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("FootstepWater/1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("FootstepWater/2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("FootstepWater/5")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[node name="SoundEffects" type="Node2D"]

script = ExtResource( 1 )

[node name="FootstepGrass" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -40.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Gunshot" type="AudioStreamPlayer2D" parent="." index="1"]

stream = SubResource( 1 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="FootstepWater" type="AnimationPlayer" parent="." index="2"]

editor/display_folded = true
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.5
anims/. = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="1" type="AudioStreamPlayer2D" parent="FootstepWater" index="0"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="2" type="AudioStreamPlayer2D" parent="FootstepWater" index="1"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="5" type="AudioStreamPlayer2D" parent="FootstepWater" index="2"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AmmoPickup" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 7 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="EmptyGun" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


